Add depesas e apartamentos

--- a/Condominio/app/src/main/AndroidManifest.xml
+++ b/Condominio/app/src/main/AndroidManifest.xml
@@ -10,10 +10,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-    <meta-data android:name="DATABASE" android:value="sugar_example.db" />
-    <meta-data android:name="VERSION" android:value="2" />
-    <meta-data android:name="QUERY_LOG" android:value="true" />
-    <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="com.example" />
+        <meta-data
+            android:name="DATABASE"
+            android:value="sugar_example.db" />
+        <meta-data
+            android:name="VERSION"
+            android:value="2" />
+        <meta-data
+            android:name="QUERY_LOG"
+            android:value="true" />
+        <meta-data
+            android:name="DOMAIN_PACKAGE_NAME"
+            android:value="com.example" />
+
         <activity android:name=".app.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +30,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".app.AddApartamentoActivity" />
+        <activity android:name=".app.AddDespesasActivity"></activity>
     </application>
 
 </manifest>
